<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E8E8E8"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/filter_unselected_shape"
            android:src="@drawable/ic_baseline_filter_list_24"
            android:contentDescription="@string/filter_image" />

        <TextView
            android:id="@+id/no_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/filter_unselected_shape"
            android:fontFamily="@font/product_sans_regular"
            android:paddingStart="10dp"
            android:paddingTop="7dp"
            android:paddingEnd="10dp"
            android:paddingBottom="7dp"
            android:text="@string/no_filters"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/high_to_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/filter_unselected_shape"
            android:fontFamily="@font/product_sans_regular"
            android:paddingStart="10dp"
            android:paddingTop="7dp"
            android:paddingEnd="10dp"
            android:paddingBottom="7dp"
            android:text="@string/high_to_low"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/low_to_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filter_unselected_shape"
            android:fontFamily="@font/product_sans_regular"
            android:layout_margin="5dp"
            android:paddingStart="10dp"
            android:paddingTop="7dp"
            android:paddingEnd="10dp"
            android:paddingBottom="7dp"
            android:text="@string/low_to_high"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filter_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_notes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="28dp"
        app:backgroundTint="@color/red"
        android:clickable="true"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/create_notes"
        android:focusable="auto" />
</RelativeLayout>