<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E8E8E8"
    tools:context=".Activity.InsertNotesActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activity.InsertNotesActivity">

        <EditText
            android:id="@+id/notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="title"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/hint_title"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="text" />

        <EditText
            android:id="@+id/notes_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/hint_subtitle"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/green_priority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/green_shape"
                android:src="@drawable/ic_baseline_done_24" />

            <ImageView
                android:id="@+id/yellow_priority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/yellow_shape" />

            <ImageView
                android:id="@+id/red_priority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/red_shape" />

        </LinearLayout>

        <EditText
            android:id="@+id/notesData"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="start"
            android:hint="@string/hint_notes"
            android:padding="15dp"
            android:inputType="text"
            android:textColor="@color/black"
             />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done_notes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="28dp"
        app:backgroundTint="@color/red"
        android:clickable="true"
        android:src="@drawable/ic_baseline_done_24" />

</RelativeLayout>

